crates/stella-tui/tests/snapshots/v2_status_bar__v2_status_bar_at_the_extremes.snap
---
source: crates/stella-tui/tests/v2_status_bar.rs
expression: "frame(StatusBar(Status\n{\n    ctx_used: 0.0, spend_usd: 0.0, saved_usd: 0.0, det: 1.0, inbox: 0,\n    ..demo()\n}), 100, 1)"
---
kimi-k3 · execute · ctx ░░░░░░░░░░░░ 0% · $0.00 · saved $0.00 · det 100% · ✉ 0                ? help
────────────────────────────────────────────────────────────────────────────────────────────────────
metal map: G gold · B gold_bright · s silver · w text · m muted · d dim · b border · R red · n green
wwwwwwwdddwwwwwwwdddmmmmbbbbbbbbbbbbwwwdddGGGGGdddmmmmmmGGGGGdddmmmmwwwwdddssw----------------dddddd
